[gd_scene load_steps=18 format=3 uid="uid://8w3w2i8t0sya"]

[ext_resource type="Script" path="res://Stages/combat.gd" id="1_43xa8"]
[ext_resource type="AudioStream" uid="uid://cnl60ogh1p6c6" path="res://Assets/SoundAssets/music.wav" id="2_shfe7"]
[ext_resource type="Texture2D" uid="uid://d2rl8ifi7351r" path="res://Assets/BackgroundAssets/adventure-2528477_1920.png" id="2_x38gq"]
[ext_resource type="Texture2D" uid="uid://ivrh228dk3qi" path="res://Assets/BackgroundAssets/Tileset.png" id="3_yfgfq"]
[ext_resource type="PackedScene" uid="uid://rye083gfdwpb" path="res://Characters/player.tscn" id="4_wdfew"]
[ext_resource type="Texture2D" uid="uid://crk8hjihsc84d" path="res://Assets/BackgroundAssets/Overlay.png" id="5_c50is"]
[ext_resource type="PackedScene" uid="uid://bhouq6cvpo5f4" path="res://Characters/enemy_long.tscn" id="5_ue57x"]
[ext_resource type="PackedScene" uid="uid://c18xgpf54aevr" path="res://Characters/enemy_fast.tscn" id="6_ik60j"]
[ext_resource type="PackedScene" uid="uid://hl8tdoabsb5k" path="res://Characters/enemy_strong.tscn" id="8_kiwpy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hjwg"]
size = Vector2(217, 625)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ox50j"]
texture = ExtResource("3_yfgfq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
11:6/0 = 0
12:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
15:12/0 = 0
16:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
15:13/0 = 0
16:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
15:14/0 = 0
16:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
15:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
15:17/0 = 0
16:17/0 = 0
0:4/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_s85x1"]
sources/0 = SubResource("TileSetAtlasSource_ox50j")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sygoy"]
bg_color = Color(0.784314, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pepb"]
bg_color = Color(1, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_byfmy"]
bg_color = Color(1, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jc0q"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4xli"]
size = Vector2(260.75, 348)

[node name="Stage1" type="Node2D"]
script = ExtResource("1_43xa8")
stage_number = 1

[node name="Tutorial" type="Label" parent="."]
offset_left = 186.0
offset_top = 217.0
offset_right = 1104.0
offset_bottom = 498.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "MOVE: A,D,←,→
ATTACK: S,↓,Space"

[node name="Tutorial2" type="Label" parent="."]
offset_left = 186.0
offset_top = 217.0
offset_right = 953.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "

Tip: Hit and Run"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_shfe7")
autoplay = true

[node name="DeadBGM" type="AudioStreamPlayer" parent="."]

[node name="ClearBGM" type="AudioStreamPlayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Wall" type="StaticBody2D" parent="ParallaxBackground"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/Wall"]
position = Vector2(-108.5, 232)
shape = SubResource("RectangleShape2D_0hjwg")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_x38gq")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer2"]
tile_set = SubResource("TileSet_s85x1")
format = 2
layer_0/tile_data = PackedInt32Array(1769472, 131072, 0, 1769473, 196608, 0, 1769474, 262144, 0, 1769475, 327680, 0, 1769476, 393216, 0, 1769477, 131072, 0, 1769478, 196608, 0, 1769479, 262144, 0, 1769480, 327680, 0, 1769481, 393216, 0, 1769482, 131072, 0, 1769483, 196608, 0, 1769484, 262144, 0, 1769485, 327680, 0, 1769486, 393216, 0, 1769487, 131072, 0, 1769488, 196608, 0, 1769489, 262144, 0, 1769490, 327680, 0, 1769491, 393216, 0, 1769492, 131072, 0, 1769493, 196608, 0, 1769494, 262144, 0, 1769495, 327680, 0, 1769496, 393216, 0, 1769497, 131072, 0, 1769498, 196608, 0, 1769499, 262144, 0, 1769500, 327680, 0, 1769501, 393216, 0, 1769502, 131072, 0, 1769503, 196608, 0, 1769504, 262144, 0, 1769505, 327680, 0, 1769506, 393216, 0, 1769507, 131072, 0, 1769508, 196608, 0, 1769509, 262144, 0, 1769510, 327680, 0, 1769511, 393216, 0, 1769512, 131072, 0, 1769513, 196608, 0, 1769514, 262144, 0, 1769515, 327680, 0, 1769516, 393216, 0, 1769517, 131072, 0, 1769518, 131072, 0, 1769519, 196608, 0, 1769520, 262144, 0, 1769521, 327680, 0, 1769522, 393216, 0, 1769523, 131072, 0, 1769524, 196608, 0, 1769525, 262144, 0, 1769526, 327680, 0, 1769527, 393216, 0, 1769528, 131072, 0, 1769529, 196608, 0, 1769530, 262144, 0, 1769531, 327680, 0, 1769532, 393216, 0, 1769533, 131072, 0, 1769534, 196608, 0, 1769535, 262144, 0, 1769536, 327680, 0, 1769537, 393216, 0, 1769538, 131072, 0, 1769539, 196608, 0, 1769540, 262144, 0, 1769541, 131072, 0, 1769542, 196608, 0, 1769543, 262144, 0, 1572886, 131072, 0)

[node name="ClearCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="ClearCanvasLayer"]
position = Vector2(576, 321.25)
scale = Vector2(0.445556, 0.392917)
texture = ExtResource("5_c50is")

[node name="Label" type="Label" parent="ClearCanvasLayer"]
offset_left = 434.0
offset_top = 119.0
offset_right = 751.0
offset_bottom = 188.0
theme_override_font_sizes/font_size = 50
text = "STAGE CLEAR"

[node name="Label2" type="Label" parent="ClearCanvasLayer"]
offset_left = 400.0
offset_top = 232.0
offset_right = 928.0
offset_bottom = 301.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_font_sizes/font_size = 50
text = "Congratulations"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="ClearCanvasLayer"]
offset_left = 550.0
offset_top = 482.0
offset_right = 726.0
offset_bottom = 559.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_sygoy")
theme_override_styles/hover = SubResource("StyleBoxFlat_0pepb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_byfmy")
theme_override_styles/focus = SubResource("StyleBoxFlat_6jc0q")
text = "Continue"

[node name="Waves" type="Node2D" parent="."]

[node name="Wave1" type="Area2D" parent="Waves"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Waves/Wave1"]
position = Vector2(856.25, 355)
shape = SubResource("RectangleShape2D_p4xli")

[node name="Enemies" type="Node2D" parent="Waves/Wave1"]

[node name="EnemyFast" parent="Waves/Wave1/Enemies" instance=ExtResource("6_ik60j")]

[node name="Wave2" type="Area2D" parent="Waves"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Waves/Wave2"]
position = Vector2(1487, 341)
shape = SubResource("RectangleShape2D_p4xli")

[node name="Enemies" type="Node2D" parent="Waves/Wave2"]

[node name="EnemyLong" parent="Waves/Wave2/Enemies" instance=ExtResource("5_ue57x")]

[node name="Wave3" type="Area2D" parent="Waves"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Waves/Wave3"]
position = Vector2(2063, 341)
shape = SubResource("RectangleShape2D_p4xli")

[node name="Enemies" type="Node2D" parent="Waves/Wave3"]

[node name="EnemyStrong" parent="Waves/Wave3/Enemies" instance=ExtResource("8_kiwpy")]

[node name="Player" parent="." instance=ExtResource("4_wdfew")]
position = Vector2(370, 435)
scale = Vector2(2, 2)

[connection signal="pressed" from="ClearCanvasLayer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="body_entered" from="Waves/Wave1" to="." method="_on_wave_1_body_entered"]
[connection signal="body_entered" from="Waves/Wave2" to="." method="_on_wave_2_body_entered"]
[connection signal="body_entered" from="Waves/Wave3" to="." method="_on_wave_3_body_entered"]
